[package]
name = "mini-redis"
version = "0.3.0"
authors = ["Ammar Abu Yaman <ammar.abu.yaman@gmail.com>"]
edition = "2021"


[dependencies]
anyhow = "1.0.59"                                   # error handling
bytes = "1.3.0"                                     # helps manage buffers
thiserror = "1.0.32"                                # error handling
tokio = { version = "1.23.0", features = ["full"] } # async networking
rand = "0.8.5"                                      # rng and sampling
